fixed button jumping issue in project cards and better aligned card sections. Also pulled technology stack section title from json rather than hardcoded english version.

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -122,7 +122,7 @@ a {
 
 .portfolio_list {
     display: grid;
-    grid-template-columns: 0.5fr 2fr 0.5fr;
+    grid-template-columns: 0.25fr 2fr 0.25fr;
     justify-content: center;
     justify-items: center;
     text-align: center;
@@ -132,8 +132,7 @@ a {
 
 .project_container {
     display: grid;
-    grid-template-rows: 5;
-    align-items: center;
+    grid-template-rows: 2fr 0.25fr 0.5fr 0.25fr 0.6fr;
     justify-items: center;
     margin-bottom: 2rem;
     border: 1px solid #ffffff50;
@@ -143,7 +142,6 @@ a {
 .project_container p {
     text-align: justify;
     padding: 0 1rem 0 1rem;
-    margin: 0.5rem;
 }
 
 .project_container ul {
@@ -188,7 +186,7 @@ figcaption {
 }
 
 .project_links a {
-    padding: 3px;
+    padding: 5px;
     border: 1px solid transparent;
     border-radius: 0.25rem;
 }
@@ -222,7 +220,7 @@ figcaption {
 
 .project_links a:hover {
     padding: 5px;
-    border: 1px solid #ffffff50;
+    border: 1px solid #f28f3850;
     border-radius: 0.25rem;
 }
 
@@ -346,12 +344,9 @@ input:checked+.slider:before {
         gap: 1vw;
     }
 
-    .project_container {
-        display: grid;
-        grid-template-rows: 5;
-        align-items: center;
-        justify-items: center;
-        max-width: 690px;
+    .project_container p {
+        text-align: justify;
+        padding: 0 2rem 0 2rem;
     }
 
     .project_links ul {
